--- a/_layouts/test.html
+++ b/_layouts/test.html
@@ -20,7 +20,7 @@ nav_enabled: false
             <div></div>
             {% endif %}
             {% include header_custom.html %}
-            {% include dropdown.html %}
+            {%- include components/dropdown.html -%}
             {% if site.aux_links %}
             {% include components/aux_nav.html %}
             {% endif %}
