--- a/_includes/components/sidebar.html
+++ b/_includes/components/sidebar.html
@@ -2,24 +2,24 @@
   <div class="site-header" role="banner">
     <a href="{{ '/' | relative_url }}" class="lh-tight fs-3 text-grey-dk-200 custom-logo site-title notranslate">
       <img width="36px" height="36px" src="{{ site.favicon_ico | relative_url }}" alt="logo">{{site.title}}
-    </a>
-    <button id="menu-button" class="site-button btn-reset" aria-label="Toggle menu" aria-pressed="false">
-      <svg viewBox="0 0 24 24" class="icon" aria-hidden="true">
-        <use xlink:href="#svg-menu"></use>
-      </svg>
-    </button>
+    </a>    
   </div>
-
   <p class="custom-slogan">{{site.description}}</p>
 
   {% include_cached components/site_nav.html %}
   {% capture nav_footer_custom %}
   {%- include nav_footer_custom.html -%}
   {% endcapture %}
+
+  {% if site.aux_links %}
+  {% include components/aux_nav.html %}
+  {% endif %}
+
   {% if nav_footer_custom != "" %}
   {{ nav_footer_custom }}
   {% else %}
   <footer class="site-footer">
+    {%- include components/footer.html -%}
   </footer>
   {% endif %}
 </div>
