--- a/_includes/components/sidebar.html
+++ b/_includes/components/sidebar.html
@@ -11,6 +11,8 @@
   {%- include nav_footer_custom.html -%}
   {% endcapture %}
 
+  {%- include components/dropdown.html -%}
+
   {% if site.aux_links %}
   {% include components/aux_nav.html %}
   {% endif %}
