--- a/_layouts/test.html
+++ b/_layouts/test.html
@@ -19,8 +19,9 @@ nav_enabled: false
             {% else %}
             <div></div>
             {% endif %}
+            <!-- header_custom -->
             {% include header_custom.html %}
-            {%- include components/dropdown.html -%}
+            <!-- header_custom -->
         </div>
         <div class="main-content-wrap">
             <div id="main-content" class="main-content">
