Revert "css experiment"
This reverts commit 7fe7a56b44f3cf4c1ea710324c94a8018f108fe2.

--- a/_includes/components/sidebar.html
+++ b/_includes/components/sidebar.html
@@ -6,6 +6,13 @@
   </div>
   <p class="custom-slogan">{{site.description}}</p>
 
+        <div id="main-header" class="main-header">
+          {% if site.search_enabled != false %}
+          {% include components/search_header.html %}
+          {% else %}
+          <div></div>
+          {% endif %}
+        </div>
 
 
 
