--- a/_layouts/test.html
+++ b/_layouts/test.html
@@ -19,6 +19,11 @@ nav_enabled: false
             {% else %}
             <div></div>
             {% endif %}
+            {% include header_custom.html %}
+            {%- include components/dropdown.html -%}
+            {% if site.aux_links %}
+            {% include components/aux_nav.html %}
+            {% endif %}
         </div>
         <div class="main-content-wrap">
             <div id="main-content" class="main-content">
@@ -26,6 +31,7 @@ nav_enabled: false
                     {{ content }}
                 </main>
                 {%- include components/comments.html -%}
+                {%- include components/footer.html -%}
             </div>
         </div>
         <div class="search-overlay"></div>
@@ -34,4 +40,5 @@ nav_enabled: false
     <script src="https://translate.google.com/translate_a/element.js?cb=translate" async></script>
     {%- include components/mermaid.html -%}
 </body>
+
 </html>
