--- a/_includes/components/sidebar.html
+++ b/_includes/components/sidebar.html
@@ -16,5 +16,7 @@
   {% if site.aux_links %}
   {% include components/aux_nav.html %}
   {% endif %}
+  {%- include components/dropdown.html -%}
+
 
 </div>
