--- a/_includes/components/sidebar.html
+++ b/_includes/components/sidebar.html
@@ -12,6 +12,12 @@
 
   <p class="custom-slogan">{{site.description}}</p>
 
+            {% if site.search_enabled != false %}
+            {% include components/search_header.html %}
+            {% endif %}
+
+
+
   {% include_cached components/site_nav.html %}
   {% if site.aux_links %}
   {% include components/aux_nav.html %}
