--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,6 +122,14 @@ p,.side-bar * {
     -ms-user-select: none;
 }
 
+
+
+h1::selection,
+h2::selection,
+h3::selection,
+h4::selection,
+h5::selection,
+h6::selection,
 p::selection {
     background-color: transparent;
     color: inherit;
