--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,7 +61,8 @@
 code::selection,
 code span::selection {
     background-color: #a3d9a5;
-    color: var(--h7);
+    background-color: var(--h1);
+   color: var(--h7);
 }
 
 *,
