--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,184 @@
 @charset "UTF-8";
 
+/**/
+
+.nav-list {
+    padding: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+    list-style: none;
+}
+
+.nav-list .nav-list-item {
+    position: relative;
+    margin: 0;
+}
+
+.nav-list .nav-list-item {
+    font-size: 0.875rem !important;
+}
+
+@media (min-width: 31.25rem) {
+    .nav-list .nav-list-item {
+        font-size: 1rem !important;
+    }
+}
+
+@media (min-width: 50rem) {
+    .nav-list .nav-list-item {
+        font-size: 0.75rem !important;
+    }
+}
+
+@media (min-width: 50rem) and (min-width: 31.25rem) {
+    .nav-list .nav-list-item {
+        font-size: 0.875rem !important;
+    }
+}
+
+.nav-list .nav-list-item .nav-list-link {
+    display: block;
+    min-height: 3rem;
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+    line-height: 2.5rem;
+    padding-right: 3rem;
+    padding-left: 1rem;
+}
+
+@media (min-width: 50rem) {
+    .nav-list .nav-list-item .nav-list-link {
+        min-height: 2rem;
+        line-height: 1.5rem;
+        padding-right: 2rem;
+        padding-left: 2rem;
+    }
+}
+
+.nav-list .nav-list-item .nav-list-link.external>svg {
+    width: 1rem;
+    height: 1rem;
+    vertical-align: text-bottom;
+}
+
+.nav-list .nav-list-item .nav-list-link.active {
+    font-weight: 600;
+    text-decoration: none;
+    color: #0d070f;
+}
+
+.nav-list .nav-list-item .nav-list-link:hover,
+.nav-list .nav-list-item .nav-list-link.active {
+    background: var(--h2);
+}
+
+.nav-list .nav-list-item .nav-list-expander {
+    position: absolute;
+    right: 0;
+    width: 3rem;
+    height: 3rem;
+    padding: 0.75rem;
+    /*
+    color: var(--h2);
+    */
+}
+
+@media (min-width: 50rem) {
+    .nav-list .nav-list-item .nav-list-expander {
+        width: 2rem;
+        height: 2rem;
+        padding: 0.5rem;
+    }
+}
+
+.nav-list .nav-list-item .nav-list-expander:hover {
+    background-image: linear-gradient(-90deg, rgb(234.8, 236.82, 244.9) 0%, rgba(234.8, 236.82, 244.9, 0.8) 100%);
+}
+
+.nav-list .nav-list-item .nav-list-expander svg {
+    transform: rotate(90deg);
+}
+
+.nav-list .nav-list-item>.nav-list {
+    display: none;
+    padding-left: 0.75rem;
+    list-style: none;
+}
+
+.nav-list .nav-list-item>.nav-list .nav-list-item {
+    position: relative;
+}
+
+.nav-list .nav-list-item>.nav-list .nav-list-item .nav-list-link {
+    color: var(--h5);
+}
+
+.nav-list .nav-list-item>.nav-list .nav-list-item .nav-list-expander {
+    color: var(--h5);
+}
+
+.nav-list .nav-list-item.active>.nav-list-expander svg {
+    transform: rotate(-90deg);
+}
+
+.nav-list .nav-list-item.active>.nav-list {
+    display: block;
+}
+
+.nav-category {
+    padding: 0.5rem 1rem;
+    font-weight: 600;
+    text-align: start;
+    text-transform: uppercase;
+    /*    color: #0d070f;*/
+    color: #022000;
+    /*    border-bottom: 1px solid var(--h2);*/
+    letter-spacing: 1px;
+
+}
+
+.nav-category {
+    font-size: 0.75rem !important;
+}
+
+@media (min-width: 32rem) {
+    .nav-category {
+        font-size: .9rem !important;
+    }
+}
+
+@media (min-width: 50rem) {
+    .nav-category {
+        padding: 0.5rem 2rem;
+        margin-top: 1rem;
+        text-align: start;
+    }
+
+    .nav-category:first-child {
+        margin-top: 0;
+    }
+}
+
+.nav-list.nav-category-list>.nav-list-item {
+    margin: 0;
+}
+
+.nav-list.nav-category-list>.nav-list-item>.nav-list {
+    padding: 0;
+}
+
+.nav-list.nav-category-list>.nav-list-item>.nav-list>.nav-list-item>.nav-list-link {
+    color: #7253ed;
+}
+
+.nav-list.nav-category-list>.nav-list-item>.nav-list>.nav-list-item>.nav-list-expander {
+    color: #7253ed;
+}
+
+/**/
+
+
+
 @font-face {
     font-family: JetBrains;
     src: url('../fonts/JetBrainsMono-Medium.woff2') format('woff2');
