--- a/_includes/components/sidebar.html
+++ b/_includes/components/sidebar.html
@@ -4,6 +4,8 @@
       <img width="36px" height="36px" src="{{ site.favicon_ico | relative_url }}" alt="logo">{{site.title}}
     </a>
     
+    <button id="menu-button" class="site-button btn-reset d-none" aria-label="Toggle menu" aria-pressed="false">
+    </button>
   </div>
 
   <p class="custom-slogan">{{site.description}}</p>
