--- a/_includes/components/sidebar.html
+++ b/_includes/components/sidebar.html
@@ -18,9 +18,10 @@
 
   {% include_cached components/site_nav.html %}
   {% if site.aux_links %}
+  <div class="nav-category notranslate">Links</div>
+  <div class="notranslate">
   {% include components/aux_nav.html %}
+  </div>
   {% endif %}
   {%- include components/dropdown.html -%}
-
-
 </div>
