--- a/_includes/components/dropdown.html
+++ b/_includes/components/dropdown.html
@@ -1,3 +1,4 @@
+<!--
 <div class="dropdown notranslate">
     <button class="dropbtn">Translate</button>
     <div class="dropdown-lang">
@@ -9,3 +10,14 @@
         <a href="#" class="lang-select" data-lang="fr">Français</a>
     </div>
 </div>
+-->
+
+<details class="notranslate">
+    <summary class="">Translate</summary>
+    <a href="#" class="lang-select" data-lang="en">English</a>
+    <a href="#" class="lang-select" data-lang="es">Español</a>
+    <a href="#" class="lang-select" data-lang="it">Italiano</a>
+    <a href="#" class="lang-select" data-lang="de">Deutsch</a>
+    <a href="#" class="lang-select" data-lang="pt">Português</a>
+    <a href="#" class="lang-select" data-lang="fr">Français</a>
+</details>
