--- a/_includes/components/dropdown.html
+++ b/_includes/components/dropdown.html
@@ -14,10 +14,12 @@
 
 <details class="notranslate">
     <summary class="">Translate</summary>
-    <a href="#" class="lang-select" data-lang="en">English</a>
-    <a href="#" class="lang-select" data-lang="es">Español</a>
-    <a href="#" class="lang-select" data-lang="it">Italiano</a>
-    <a href="#" class="lang-select" data-lang="de">Deutsch</a>
-    <a href="#" class="lang-select" data-lang="pt">Português</a>
-    <a href="#" class="lang-select" data-lang="fr">Français</a>
+    <ul>
+        <li><a href="#" class="lang-select" data-lang="en">English</a></li>
+        <li><a href="#" class="lang-select" data-lang="es">Español</a></li>
+        <li><a href="#" class="lang-select" data-lang="it">Italiano</a></li>
+        <li><a href="#" class="lang-select" data-lang="de">Deutsch</a></li>
+        <li><a href="#" class="lang-select" data-lang="pt">Português</a></li>
+        <li><a href="#" class="lang-select" data-lang="fr">Français</a></li>
+    </ul>
 </details>
