--- a/_includes/components/dropdown.html
+++ b/_includes/components/dropdown.html
@@ -12,9 +12,9 @@
 </div>
 -->
 
-<details class="notranslate">
-    <summary class="">Translate</summary>
-    <ul>
+<details class="notranslate dropdown">
+    <summary class="dropbtn">Translate</summary>
+    <ul class="dropdown-lang">
         <li><a href="#" class="lang-select" data-lang="en">English</a></li>
         <li><a href="#" class="lang-select" data-lang="es">Español</a></li>
         <li><a href="#" class="lang-select" data-lang="it">Italiano</a></li>
