--- a/_includes/components/dropdown.html
+++ b/_includes/components/dropdown.html
@@ -12,14 +12,16 @@
 </div>
 -->
 
-<details class="notranslate dropdown">
-    <summary class="dropbtn">Translate</summary>
-    <ul class="dropdown-lang">
-        <li><a href="#" class="lang-select" data-lang="en">English</a></li>
-        <li><a href="#" class="lang-select" data-lang="es">Español</a></li>
-        <li><a href="#" class="lang-select" data-lang="it">Italiano</a></li>
-        <li><a href="#" class="lang-select" data-lang="de">Deutsch</a></li>
-        <li><a href="#" class="lang-select" data-lang="pt">Português</a></li>
-        <li><a href="#" class="lang-select" data-lang="fr">Français</a></li>
-    </ul>
-</details>
+<div class="dropdown notranslate">
+    <button class="dropbtn">Translate</button>
+    <div class="dropdown-lang">
+        <ul>
+            <li><a href="#" class="lang-select" data-lang="en">English</a></li>
+            <li><a href="#" class="lang-select" data-lang="es">Español</a></li>
+            <li><a href="#" class="lang-select" data-lang="it">Italiano</a></li>
+            <li><a href="#" class="lang-select" data-lang="de">Deutsch</a></li>
+            <li><a href="#" class="lang-select" data-lang="pt">Português</a></li>
+            <li><a href="#" class="lang-select" data-lang="fr">Français</a></li>        
+        </ul>
+    </div>
+</div>
