--- a/_includes/components/dropdown.html
+++ b/_includes/components/dropdown.html
@@ -13,7 +13,7 @@
 -->
 
 <div class="dropdown notranslate">
-    <button class="dropbtn">Translate</button>
+    <button class="dropbtn nav-category">Translate</button>
     <div class="dropdown-lang">
         <ul>
             <li><a href="#" class="lang-select" data-lang="en">English</a></li>
