--- a/_includes/components/dropdown.html
+++ b/_includes/components/dropdown.html
@@ -16,12 +16,12 @@
     <button class="dropbtn nav-category">Translate</button>
     <div class="dropdown-lang">
         <ul>
-            <li><a href="#" class="lang-select" data-lang="en">English</a></li>
-            <li><a href="#" class="lang-select" data-lang="es">Español</a></li>
-            <li><a href="#" class="lang-select" data-lang="it">Italiano</a></li>
-            <li><a href="#" class="lang-select" data-lang="de">Deutsch</a></li>
-            <li><a href="#" class="lang-select" data-lang="pt">Português</a></li>
-            <li><a href="#" class="lang-select" data-lang="fr">Français</a></li>        
+            <li><a href="#" class="lang-select site-button" data-lang="en">English</a></li>
+            <li><a href="#" class="lang-select site-button" data-lang="es">Español</a></li>
+            <li><a href="#" class="lang-select site-button" data-lang="it">Italiano</a></li>
+            <li><a href="#" class="lang-select site-button" data-lang="de">Deutsch</a></li>
+            <li><a href="#" class="lang-select site-button" data-lang="pt">Português</a></li>
+            <li><a href="#" class="lang-select site-button" data-lang="fr">Français</a></li>        
         </ul>
     </div>
 </div>
