--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -492,6 +492,7 @@ main>.highlighter-rouge {
     .side-bar-fixed {
         position: fixed;
         left:0;
+        width:100%;
     }
 
     body {
