--- a/_includes/components/sidebar.html
+++ b/_includes/components/sidebar.html
@@ -2,14 +2,10 @@
   <div class="site-header" role="banner">
     <a href="{{ '/' | relative_url }}" class="lh-tight fs-3 text-grey-dk-200 custom-logo site-title notranslate">
       <img width="36px" height="36px" src="{{ site.favicon_ico | relative_url }}" alt="logo">{{site.title}}
-    </a>
-    
-    <button id="menu-button" class="site-button btn-reset d-none" aria-label="Toggle menu" aria-pressed="false">
-    </button>
+    </a>    
+    <button id="menu-button" class="site-button btn-reset d-none" aria-label="Toggle menu" aria-pressed="false"></button>
   </div>
-
   <p class="custom-slogan">{{site.description}}</p>
-
   {% if site.search_enabled != false %}
   {% include components/search_header.html %}
   {% endif %}
