--- a/_layouts/test.html
+++ b/_layouts/test.html
@@ -9,7 +9,7 @@ nav_enabled: false
     <div id="translate"></div>
     <a class="skip-to-main" href="#main-content">Skip to main content</a>
     {%- include components/svg.html -%}
-    <div class="side-bar side-bar-fixed">
+    <div class="side-bar">
         {%- include components/sidebar.html -%}
     </div>
     <div class="main" id="top">
