--- a/_includes/components/sidebar.html
+++ b/_includes/components/sidebar.html
@@ -1,4 +1,4 @@
-
+<div class="side-bar-fixed">
   <div class="site-header" role="banner">
     <a href="{{ '/' | relative_url }}" class="lh-tight fs-3 text-grey-dk-200 custom-logo site-title notranslate">
       <img width="36px" height="36px" src="{{ site.favicon_ico | relative_url }}" alt="logo">{{site.title}}
@@ -17,3 +17,4 @@
     {% include components/aux_nav.html %}
   </div>
   {% endif %}
+</div>
