--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,8 +10,7 @@
     width:100%;
     height:100%;
     display: inline-block;
-    min-height: 2rem;
-    padding: .25rem 2rem;
+    padding: 1.5rem .5rem;
     line-height: 0;
 }
 
