--- a/_includes/components/dropdown.html
+++ b/_includes/components/dropdown.html
@@ -1,5 +1,5 @@
 <div class="dropdown notranslate">
-    <button class="dropbtn nav-category">Translate</button>
+    <button class="dropbtn">Translate &rsaquo;</button>
     <div class="dropdown-lang">
         <ul>
             <li><a href="#" class="lang-select site-button" data-lang="en">English</a></li>
